@@ -10,6 +10,10 @@ dpkg (1.18.24) UNRELEASED; urgency=medium
     when printing the error message, to ease debugging those problems after
     the fact. Closes: #813454, #860238
     Based on a patch by Bastien ROUCARIÈS <roucaries.bastien@gmail.com>.
+  * Add duplicate prevention code for debian/files to dpkg-genbuildinfo, so
+    that successive runs with different versions and equivalent build types
+    do not generate multiple .buildinfo entries to be uploaded, which is
+    similar to what dpkg-gencontrol is doing for .deb files.
   * Architecture support:
     - Add support for ARM64 ILP32. Closes: #824742
       Thanks to Wookey <wookey@wookware.org>.
